--- a/.github/workflows/templates/deployment.tmpl
+++ b/.github/workflows/templates/deployment.tmpl
@@ -36,6 +36,10 @@ spec:
             - name: APPNAME
               value: ${SERVICE_NAME}
           image: ${IMAGE_NAME}
+          command:
+            - ./bin/arcade
+            - -conf
+            - conf.d/config.toml
           volumeMounts:
           - mountPath: /opt/arcade/conf.d/config.toml
             name: config-volume
